--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
                 </p>
                 <p>
                   <a href="https://orcid.org/0009-0003-5303-1855" target="_blank">
-                      <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID Logo" style="width: 20px; height: 20px;"></a>
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/ORCID_iD.svg" alt="ORCID Logo" style="width: 20px; height: 20px;"></a>
 
                   <a href="https://scholar.google.com/citations?hl=en&user=6iHsIYMAAAAJ" target="_blank">
-                      <img src="https://scholar.google.com/favicon.ico" alt="Google Scholar Logo" style="width: 20px; height: 20px;"></a>
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar Logo" style="width: 20px; height: 20px;"></a>
 
                   <a href="https://arxiv.org/a/lei_z_1" target="_blank">
                       <img src="https://static.arxiv.org/static/browse/0.3.4/images/icons/favicon.ico" alt="arXiv Logo" style="width: 20px; height: 20px;"></a>
 
                   <a href="https://github.com/leizheng2005" target="_blank">
-                      <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 20px; height: 20px;"></a>
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo" style="width: 20px; height: 20px;"></a>
 
                    <a href="https://www.linkedin.com/in/leizheng2005" target="_blank">
-                        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Logo" style="width: 20px; height: 20px;"></a>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LinkedIn_icon_circle.svg" alt="LinkedIn Logo" style="width: 20px; height: 20px;"></a>
                   
                           <br></p>
 
@@ -453,28 +453,28 @@
   </a>
 
   <a href="https://scholar.google.com/citations?hl=en&user=6iHsIYMAAAAJ" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Google_Scholar_logo.svg" alt="Google Scholar Logo" style="width: 20px; height: 20px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar Logo" style="width: 20px; height: 20px;">
   </a>
-
+<!-- 
   <a href="https://arxiv.org/a/lei_z_1" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/ArXiv_logo.svg" alt="arXiv Logo" style="width: 20px; height: 20px;">
-  </a>
+  </a> -->
 
   <a href="https://github.com/leizheng2005" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo" style="width: 20px; height: 20px;">
   </a>
 
   <a href="https://www.linkedin.com/in/leizheng2005" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/LinkedIn_Logo.svg" alt="LinkedIn Logo" style="width: 20px; height: 20px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LinkedIn_icon_circle.svg" alt="LinkedIn Logo" style="width: 20px; height: 20px;">
   </a>
 
-  <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">
+<!--   <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Zhihu_Logo.svg" alt="Zhihu Logo" style="width: 20px; height: 20px;">
   </a>
 
   <a href="https://space.bilibili.com/3493282034223793" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Bilibili_logo.svg" alt="Bilibili Logo" style="width: 20px; height: 20px;">
-  </a>
+  </a> -->
 </p>
 
 
