--- a/index.html
+++ b/index.html
@@ -455,10 +455,10 @@
   <a href="https://scholar.google.com/citations?hl=en&user=6iHsIYMAAAAJ" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar Logo" style="width: 20px; height: 20px;">
   </a>
-<!-- 
+
   <a href="https://arxiv.org/a/lei_z_1" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/ArXiv_logo.svg" alt="arXiv Logo" style="width: 20px; height: 20px;">
-  </a> -->
+  </a>
 
   <a href="https://github.com/leizheng2005" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo" style="width: 20px; height: 20px;">
@@ -468,13 +468,13 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/LinkedIn_icon_circle.svg" alt="LinkedIn Logo" style="width: 20px; height: 20px;">
   </a>
 
-<!--   <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">
+  <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Zhihu_Logo.svg" alt="Zhihu Logo" style="width: 20px; height: 20px;">
   </a>
 
   <a href="https://space.bilibili.com/3493282034223793" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Bilibili_logo.svg" alt="Bilibili Logo" style="width: 20px; height: 20px;">
-  </a> -->
+  </a>
 </p>
 
 
