--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
                           </div>
                           <div class="section-content">
                               <p class='zh'>2023.10-2024.05: 陕西省人工智能联合重点实验室-陕西科技大学人工智能与机器视觉实验室-计算机视觉方向 <a href="https://aimven.sust.edu.cn/index.htm">[url]</a> </p>
-                              <p class='zh'>2024.06-2024.09: 陕西科技大学-复杂环境信息智能感知团队-水下图像增强方向 <a href="http://dianzhi.www.sust.edu.cn/kxyj1/kytd.htm">[url]</a> </p>
-                              <p class="zh">2024.10-2026.06: 中国科学院自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向 <a href="https://people.ucas.edu.cn/~xhz">[url]</a> </p>
+                              <p class='zh'>2024.06-2024.09: 陕西科技大学-复杂环境信息智能感知团队-水下图像增强方向-<a href="http://dianzhi.www.sust.edu.cn/info/4667/37862.htm">导师姚海洋副教授</a> <a href="http://dianzhi.www.sust.edu.cn/kxyj1/kytd.htm">[url]</a> </p>
+                              <p class="zh">2024.10-2026.06: 中国科学院自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-<a href="https://people.ucas.edu.cn/~xhz">导师周小虎研究员</a> <a href="https://people.ucas.edu.cn/~xhz">[url]</a> </p>
                           </div>
                       </div>
 
