--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
                 </div>
                 <div class="section-content">
                     <div>
-                        <p> 2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning (2025 arxiv) Tian-Yu Xiang; Ao-Qun Jin; Xiao-Hu Zhou*; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou*. <a href="https://doi.org/10.48550/arxiv.2503.04163">[doi]</a> <a href="https://arxiv.org/abs/2503.04163">[url]</a> <a href="pdfs/2503.04163v1.pdf">[pdf]</a> <a href="https://aoqunjin.github.io/Expert-VLA/">[code]</a> </p>
+                        <p><sup>*</sup>Indicates Corresponding Author; <sup>^<sup>Indicates Equal Contribution; <b>Bold</b> Indicates Myself.<p>
+                        <p> 2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning (2025 arxiv) Tian-Yu Xiang<sup>^<sup>; Ao-Qun Jin<sup>^<sup>; Xiao-Hu Zhou<sup>*<sup>; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou<sup>*<sup>. <a href="https://doi.org/10.48550/arxiv.2503.04163">[doi]</a> <a href="https://arxiv.org/abs/2503.04163">[url]</a> <a href="pdfs/2503.04163v1.pdf">[pdf]</a> <a href="https://aoqunjin.github.io/Expert-VLA/">[code]</a> </p>
                     </div>
                 </div>
             </div>
