--- a/index.html
+++ b/index.html
@@ -397,14 +397,12 @@
                 <div class="section-content">
                     <div lang="en">
                         <p>Home page: www.leizheng2005.github.io <a href="http://www.leizheng2005.github.io" target="_blank">[url]</a></p>
-                        <p>Wechat: leizheng1960</p>
                         <p>Email: leizheng2005@gmail.com</p>
                         <p>Address: Student Living Area of Shaanxi University of Science and Technology, Weiyanghu Street, Weiyang District, Xi'an, Shaanxi Province, China, 710021</p>
                     </div>
                     <div lang="zh">
                         <p>主页: www.leizheng2005.com <a href="http://www.leizheng2005.com" target="_blank">[url]</a></p>
-                        <p>微信: leizheng1960</p>
-                        <p>邮箱: leizheng2005@gmail.com</p>
+                        <p>邮箱: 202207010219@sust.edu.cn</p>
                         <p>地点: 中国陕西省西安市未央区未央湖街道陕西科技大学学生生活区，710021</p>
                     </div>
                 </div>
