--- a/index.html
+++ b/index.html
@@ -76,23 +76,23 @@
                     <div lang="en">
                         <h3>Education:</h3>
                             <ul style="padding-left: 40px;">
-                                <p> 2024.10-2026.06: Intern in Brain-Inspired Computing, Institute of Automation, Chinese Academy of Sciences, supervised by <a href="https://people.ucas.edu.cn/~xhz" target="_blank">Prof. Xiao-Hu Zhou</a> <a href="http://www.ia.cas.cn/" target="_blank">[url]</a> </p>
+                                <p> 2024.10-2026.06: Intern in Brain-Inspired Computing, State Key Laboratory of Multimodal Artificial Intelligence Systems, Institute of Automation, Chinese Academy of Sciences, supervised by <a href="https://people.ucas.edu.cn/~xhz" target="_blank">Prof. Xiao-Hu Zhou</a> <a href="https://mais.ia.ac.cn/" target="_blank">[url]</a> </p>
                                 <p> 2022.09-2026.06: B.S. in Artificial Intelligence, the School of Electronic Information and Artificial Intelligence, Shaanxi University of Science and Technology <a href="https://www.sust.edu.cn/" target="_blank">[url]</a> </p>
                             </ul>
                         <h3>Work:</h3>
                             <ul style="padding-left: 40px;">
-                                <p> 2022.09-2026.06: Intern in Brain-Inspired Computing, Institute of Automation, Chinese Academy of Sciences, supervised by <a href="https://people.ucas.edu.cn/~xhz" target="_blank">Prof. Xiao-Hu Zhou</a> <a href="http://www.ia.cas.cn/" target="_blank">[url]</a> </p>
+                                <p> 2022.09-2026.06: Intern in Brain-Inspired Computing, State Key Laboratory of Multimodal Artificial Intelligence Systems, Institute of Automation, Chinese Academy of Sciences, supervised by <a href="https://people.ucas.edu.cn/~xhz" target="_blank">Prof. Xiao-Hu Zhou</a> <a href="https://mais.ia.ac.cn/" target="_blank">[url]</a> </p>
                             </ul>
                     </div>
                     <div lang="zh">
                         <h3>教育经历:</h3>
                             <ul style="padding-left: 40px;">
-                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生, <a href="https://people.ucas.edu.cn/~xhz" target="_blank">导师周小虎研究员</a> <a href="http://people.ucas.edu.cn/~xhz" target="_blank">[url]</a> </p>
+                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生, <a href="https://people.ucas.edu.cn/~xhz" target="_blank">导师周小虎研究员</a> <a href="https://mais.ia.ac.cn/" target="_blank">[url]</a> </p>
                                 <p> 2022.09-2026.06: 陕西科技大学-电子信息与人工智能学院-人工智能专业-学士 <a href="https://www.sust.edu.cn/" target="_blank">[url]</a> </p>
                             </ul>
                         <h3>工作经历:</h3>
                             <ul style="padding-left: 40px;">
-                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生, <a href="https://people.ucas.edu.cn/~xhz" target="_blank">导师周小虎研究员</a> <a href="http://people.ucas.edu.cn/~xhz" target="_blank">[url]</a> </p>
+                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生, <a href="https://people.ucas.edu.cn/~xhz" target="_blank">导师周小虎研究员</a> <a href="https://mais.ia.ac.cn/" target="_blank">[url]</a> </p>
                             </ul>
                     </div>
 
@@ -227,7 +227,7 @@
                             <div lang="en">
                                 <p>2023.10–2024.05: Shaanxi Provincial Joint Key Laboratory of Artificial Intelligence – AI and Machine Vision Laboratory, Shaanxi University of Science and Technology – Research on Computer Vision <a href="https://aimven.sust.edu.cn/index.htm" target="_blank">[url]</a></p>
                                 <p>2024.06–2024.09: Intelligent Perception Team for Complex Environment Information, Shaanxi University of Science and Technology – Research on Underwater Image Enhancement – Supervised by <a href="http://dianzhi.www.sust.edu.cn/info/4667/37862.htm" target="_blank">Associate Prof. Hai-Yang Yao</a> <a href="http://dianzhi.www.sust.edu.cn/kxyj1/kytd.htm" target="_blank">[url]</a></p>
-                                <p>2024.10–2026.06: National Key Laboratory of Multimodal Artificial Intelligence Systems, Institute of Automation, Chinese Academy of Sciences – Medical Engineering and Robotics Technology (HEART) Group – Research on Brain-Inspired Computing – Supervised by <a href="https://people.ucas.edu.cn/~xhz" target="_blank">Prof. Xiao-Hu Zhou</a> <a href="https://people.ucas.edu.cn/~xhz" target="_blank">[url]</a></p>
+                                <p>2024.10–2026.06: State Key Laboratory of Multimodal Artificial Intelligence Systems, Institute of Automation, Chinese Academy of Sciences – Healthcare Engineering And Robotics Technology (HEART) Group – Research on Brain-Inspired Computing – Supervised by <a href="https://people.ucas.edu.cn/~xhz" target="_blank">Prof. Xiao-Hu Zhou</a> <a href="https://mais.ia.ac.cn/" target="_blank">[url]</a></p>
                             </div>
                         </div>
                     </div>
