--- a/index.html
+++ b/index.html
@@ -187,7 +187,21 @@
                                 <span class="toggle-icon">▼</span>
                             </div>
                             <div class="section-content">
-                                <p> 2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning (2025 arxiv) Tian-Yu Xiang<sup><b>^</b></sup>; Ao-Qun Jin<sup><b>^</b></sup>; Xiao-Hu Zhou<sup><b>*</b></sup>; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou<sup><b>*</b></sup>. <a href="https://doi.org/10.48550/arxiv.2503.04163" target="_blank">[doi]</a> <a href="https://arxiv.org/abs/2503.04163" target="_blank">[url]</a> <a href="pdfs/2503.04163v1.pdf" target="_blank">[pdf]</a> <a href="https://aoqunjin.github.io/Expert-VLA/" target="_blank">[code]</a> </p>
+                                <p> 2025.09: Task-Oriented Learning for Automatic EEG Denoising
+                                    (2025 arxiv)
+                                    Tian-Yu Xiang<sup><b>^</b></sup>; <b>Zheng Lei</b><sup><b>^</b></sup>; Xiao-Hu Zhou<sup><b>*</b></sup>; Xiao-Liang Xie; Shi-Qi Liu; Mei-Jiang Gui; Hong-Yun Ou; Xin-Zheng Huang; Xin-Yi Fu; Zeng-Guang Hou<sup><b>*</b></sup>.
+                                    <a href="https://doi.org/10.48550/arXiv.2509.14665" target="_blank">[doi]</a> 
+                                    <a href="https://arxiv.org/abs/2509.14665" target="_blank">[url]</a> 
+                                    <a href="pdfs/2509.14665.pdf" target="_blank">[pdf]</a> 
+                                </p>
+                                <p> 2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning 
+                                    (2025 arxiv) 
+                                    Tian-Yu Xiang<sup><b>^</b></sup>; Ao-Qun Jin<sup><b>^</b></sup>; Xiao-Hu Zhou<sup><b>*</b></sup>; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou<sup><b>*</b></sup>. 
+                                    <a href="https://doi.org/10.48550/arxiv.2503.04163" target="_blank">[doi]</a> 
+                                    <a href="https://arxiv.org/abs/2503.04163" target="_blank">[url]</a> 
+                                    <a href="pdfs/2503.04163.pdf" target="_blank">[pdf]</a> 
+                                    <a href="https://aoqunjin.github.io/Expert-VLA/" target="_blank">[code]</a> 
+                                </p>
                             </div>
                     </div>
                     <div id="publications-VLA" class="section">
@@ -196,7 +210,14 @@
                                 <span class="toggle-icon">▼</span>
                             </div>
                             <div class="section-content">
-                                <p> 2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning (2025 arxiv) Tian-Yu Xiang<sup><b>^</b></sup>; Ao-Qun Jin<sup><b>^</b></sup>; Xiao-Hu Zhou<sup><b>*</b></sup>; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou<sup><b>*</b></sup>. <a href="https://doi.org/10.48550/arxiv.2503.04163" target="_blank">[doi]</a> <a href="https://arxiv.org/abs/2503.04163" target="_blank">[url]</a> <a href="pdfs/2503.04163v1.pdf" target="_blank">[pdf]</a> <a href="https://aoqunjin.github.io/Expert-VLA/" target="_blank">[code]</a> </p>
+                                <p> 2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning 
+                                    (2025 arxiv) 
+                                    Tian-Yu Xiang<sup><b>^</b></sup>; Ao-Qun Jin<sup><b>^</b></sup>; Xiao-Hu Zhou<sup><b>*</b></sup>; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou<sup><b>*</b></sup>. 
+                                    <a href="https://doi.org/10.48550/arxiv.2503.04163" target="_blank">[doi]</a> 
+                                    <a href="https://arxiv.org/abs/2503.04163" target="_blank">[url]</a> 
+                                    <a href="pdfs/2503.04163.pdf" target="_blank">[pdf]</a> 
+                                    <a href="https://aoqunjin.github.io/Expert-VLA/" target="_blank">[code]</a> 
+                                </p>
                             </div>
                     </div>
                     <p><sup><b>*</b></sup>Indicates Corresponding Author; <sup><b>^</b></sup>Indicates Equal Contribution; <b>Bold</b> Indicates Myself.<p>
