--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="#publications" onclick="openSection('publications')"><span lang="en">Publications</span><span lang="zh">出版</span></a>
                         <ul class="dropdown">
                             <li><a href="#publications-ALL" onclick="openSection('publications-ALL')"><span>ALL</span></a></li>
+                            <li><a href="#publications-VLA" onclick="openSection('publications-EEG-Denoising')"><span>VLA</span></a></li>
                             <li><a href="#publications-VLA" onclick="openSection('publications-VLA')"><span>VLA</span></a></li>
                         </ul></li>
                     <li><a href="#bachelor" onclick="openSection('bachelor')"><span lang="en">Bachelor</span><span lang="zh">本科</span></a>
@@ -201,6 +202,21 @@
                                     <a href="https://arxiv.org/abs/2503.04163" target="_blank">[url]</a> 
                                     <a href="pdfs/2503.04163.pdf" target="_blank">[pdf]</a> 
                                     <a href="https://aoqunjin.github.io/Expert-VLA/" target="_blank">[code]</a> 
+                                </p>
+                            </div>
+                    </div>
+                    <div id="publications-EEG-Denoising" class="section">
+                            <div class="section-header" onclick="toggleSection(this)">
+                                <h2><span>EEG Denoising: Electroencephalography (EEG) Denoising</span></h2>
+                                <span class="toggle-icon">▼</span>
+                            </div>
+                            <div class="section-content">
+                                <p> 2025.09: Task-Oriented Learning for Automatic EEG Denoising
+                                    (2025 arxiv)
+                                    Tian-Yu Xiang<sup><b>^</b></sup>; <b>Zheng Lei</b><sup><b>^</b></sup>; Xiao-Hu Zhou<sup><b>*</b></sup>; Xiao-Liang Xie; Shi-Qi Liu; Mei-Jiang Gui; Hong-Yun Ou; Xin-Zheng Huang; Xin-Yi Fu; Zeng-Guang Hou<sup><b>*</b></sup>.
+                                    <a href="https://doi.org/10.48550/arXiv.2509.14665" target="_blank">[doi]</a> 
+                                    <a href="https://arxiv.org/abs/2509.14665" target="_blank">[url]</a> 
+                                    <a href="pdfs/2509.14665.pdf" target="_blank">[pdf]</a> 
                                 </p>
                             </div>
                     </div>
